[package]
name = "mping"
version = "0.1.1"
edition = "2021"
authors = ["Lai Shane <renylai@gmail.com>"]
description = "A cross-platform multi-target ping tool"
license = "MIT"
repository = "https://github.com/laishane/mping"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
surge-ping = "0.8.0"
clap = { version = "4.3", features = ["derive"] }
ctrlc = "3.4"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
socket2 = "0.5"
rand = "0.8"
signal-hook = "0.3"
